# django_test_api

./: db.sqlite3  popular_banco_cursos.py  popular_banco_estudantes.py  pyproject.toml
escola/: admin.py  models.py  serializers.py  validators.py  views.py
escola/migrations/: 0001_initial.py  0002_curso_deleted_at_curso_is_deleted_and_more.py  0003_remove_curso_deleted_at_remove_curso_is_deleted_and_more.py  0004_matricula.py  0005_alter_curso_codigo.py
setup/: settings.py  urls.py
